<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#04ABFE"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/seis"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numsix"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cinco"
        app:layout_constraintTop_toBottomOf="@+id/nueve"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/siete"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="#8C60D8"
        android:text="@string/numseven"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vista"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/cuatro"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numfour"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/division"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siete"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/uno"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numone"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuatro"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/cero"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numcero"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uno"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ocho"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:background="#8C60D8"
        android:text="@string/numeight"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/siete"
        app:layout_constraintTop_toBottomOf="@+id/vista"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/cinco"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numfive"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cuatro"
        app:layout_constraintTop_toBottomOf="@+id/ocho"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/dos"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numtwo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uno"
        app:layout_constraintTop_toBottomOf="@+id/cinco"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/punto"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/punt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cero"
        app:layout_constraintTop_toBottomOf="@+id/dos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nueve"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:background="#8C60D8"
        android:text="@string/numnine"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ocho"
        app:layout_constraintTop_toBottomOf="@+id/vista"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/tres"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/numthree"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dos"
        app:layout_constraintTop_toBottomOf="@+id/seis"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/igual"
        android:layout_width="329dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:background="#8C60D8"
        android:text="@string/equals"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma"
        app:layout_constraintVertical_bias="0.035" />


    <Button
        android:id="@+id/borrar"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:background="#8C60D8"
        android:text="@string/erase"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nueve"
        app:layout_constraintTop_toBottomOf="@+id/vista"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/mul"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/mul"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tres"
        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/resta"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/rest"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toEndOf="@+id/suma"
        app:layout_constraintTop_toBottomOf="@+id/mul"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/suma"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/sum"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/punto"
        app:layout_constraintTop_toBottomOf="@+id/tres"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/vista"
        android:layout_width="310dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Vista"
        android:textAlignment="textEnd"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/division"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="#8C60D8"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toEndOf="@+id/seis"
        app:layout_constraintTop_toBottomOf="@+id/borrar"
        app:layout_constraintVertical_bias="0.007" />

</androidx.constraintlayout.widget.ConstraintLayout>